FBSEditor/FlatBufferData/Grammar/Flatbuffer/FlatbufferParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Flatbuffer.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class FlatbufferParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, BRACE_L=44, BRACE_R=45, 
		BRACKET_L=46, BRACKET_R=47, PARENTHESES_L=48, PARENTHESES_R=49, INTEGER=50, 
		FLOAT=51, BOOL=52, STRING=53, IDENT=54, COMMENT=55, WS=56;
	public const int
		RULE_schema = 0, RULE_include = 1, RULE_namespace = 2, RULE_attribute = 3, 
		RULE_rootType = 4, RULE_fileExtension = 5, RULE_fileIdentifier = 6, RULE_string = 7, 
		RULE_metas = 8, RULE_bindMeta = 9, RULE_indexMeta = 10, RULE_nullableMeta = 11, 
		RULE_referenceMeta = 12, RULE_table = 13, RULE_tableField = 14, RULE_struct = 15, 
		RULE_structField = 16, RULE_rpc = 17, RULE_rpcField = 18, RULE_enum = 19, 
		RULE_enumField = 20, RULE_union = 21, RULE_unionField = 22, RULE_metadata = 23, 
		RULE_metadataField = 24, RULE_attr = 25, RULE_attrField = 26, RULE_singleType = 27, 
		RULE_listType = 28, RULE_objectValue = 29, RULE_objectValueField = 30, 
		RULE_arrayValue = 31, RULE_value = 32, RULE_singleValue = 33, RULE_scalarValue = 34;
	public static readonly string[] ruleNames = {
		"schema", "include", "namespace", "attribute", "rootType", "fileExtension", 
		"fileIdentifier", "string", "metas", "bindMeta", "indexMeta", "nullableMeta", 
		"referenceMeta", "table", "tableField", "struct", "structField", "rpc", 
		"rpcField", "enum", "enumField", "union", "unionField", "metadata", "metadataField", 
		"attr", "attrField", "singleType", "listType", "objectValue", "objectValueField", 
		"arrayValue", "value", "singleValue", "scalarValue"
	};

	private static readonly string[] _LiteralNames = {
		null, "'include'", "';'", "'namespace'", "'.'", "'attribute'", "'root_type'", 
		"'file_extension'", "'file_identifier'", "'Bind'", "'Index'", "','", "'Nullable'", 
		"'Reference'", "'table'", "':'", "'='", "'=>'", "'struct'", "'rpc_service'", 
		"'enum'", "'union'", "'bool'", "'byte'", "'ubyte'", "'short'", "'ushort'", 
		"'int'", "'uint'", "'float'", "'long'", "'ulong'", "'double'", "'int8'", 
		"'uint8'", "'int16'", "'uint16'", "'int32'", "'uint32'", "'int64'", "'uint64'", 
		"'float32'", "'float64'", "'string'", "'{'", "'}'", "'['", "']'", "'('", 
		"')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "BRACE_L", "BRACE_R", 
		"BRACKET_L", "BRACKET_R", "PARENTHESES_L", "PARENTHESES_R", "INTEGER", 
		"FLOAT", "BOOL", "STRING", "IDENT", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Flatbuffer.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FlatbufferParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FlatbufferParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FlatbufferParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SchemaContext : ParserRuleContext {
		public IncludeContext[] include() {
			return GetRuleContexts<IncludeContext>();
		}
		public IncludeContext include(int i) {
			return GetRuleContext<IncludeContext>(i);
		}
		public NamespaceContext[] @namespace() {
			return GetRuleContexts<NamespaceContext>();
		}
		public NamespaceContext @namespace(int i) {
			return GetRuleContext<NamespaceContext>(i);
		}
		public AttributeContext[] attribute() {
			return GetRuleContexts<AttributeContext>();
		}
		public AttributeContext attribute(int i) {
			return GetRuleContext<AttributeContext>(i);
		}
		public RootTypeContext[] rootType() {
			return GetRuleContexts<RootTypeContext>();
		}
		public RootTypeContext rootType(int i) {
			return GetRuleContext<RootTypeContext>(i);
		}
		public FileExtensionContext[] fileExtension() {
			return GetRuleContexts<FileExtensionContext>();
		}
		public FileExtensionContext fileExtension(int i) {
			return GetRuleContext<FileExtensionContext>(i);
		}
		public FileIdentifierContext[] fileIdentifier() {
			return GetRuleContexts<FileIdentifierContext>();
		}
		public FileIdentifierContext fileIdentifier(int i) {
			return GetRuleContext<FileIdentifierContext>(i);
		}
		public TableContext[] table() {
			return GetRuleContexts<TableContext>();
		}
		public TableContext table(int i) {
			return GetRuleContext<TableContext>(i);
		}
		public StructContext[] @struct() {
			return GetRuleContexts<StructContext>();
		}
		public StructContext @struct(int i) {
			return GetRuleContext<StructContext>(i);
		}
		public EnumContext[] @enum() {
			return GetRuleContexts<EnumContext>();
		}
		public EnumContext @enum(int i) {
			return GetRuleContext<EnumContext>(i);
		}
		public UnionContext[] union() {
			return GetRuleContexts<UnionContext>();
		}
		public UnionContext union(int i) {
			return GetRuleContext<UnionContext>(i);
		}
		public RpcContext[] rpc() {
			return GetRuleContexts<RpcContext>();
		}
		public RpcContext rpc(int i) {
			return GetRuleContext<RpcContext>(i);
		}
		public ObjectValueContext[] objectValue() {
			return GetRuleContexts<ObjectValueContext>();
		}
		public ObjectValueContext objectValue(int i) {
			return GetRuleContext<ObjectValueContext>(i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterSchema(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitSchema(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSchema(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__13) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << BRACE_L) | (1L << BRACKET_L))) != 0)) {
				{
				State = 82;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 70; include();
					}
					break;
				case 2:
					{
					State = 71; @namespace();
					}
					break;
				case 3:
					{
					State = 72; attribute();
					}
					break;
				case 4:
					{
					State = 73; rootType();
					}
					break;
				case 5:
					{
					State = 74; fileExtension();
					}
					break;
				case 6:
					{
					State = 75; fileIdentifier();
					}
					break;
				case 7:
					{
					State = 76; table();
					}
					break;
				case 8:
					{
					State = 77; @struct();
					}
					break;
				case 9:
					{
					State = 78; @enum();
					}
					break;
				case 10:
					{
					State = 79; union();
					}
					break;
				case 11:
					{
					State = 80; rpc();
					}
					break;
				case 12:
					{
					State = 81; objectValue();
					}
					break;
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode STRING() { return GetToken(FlatbufferParser.STRING, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 2, RULE_include);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; _localctx.key = Match(T__0);
			State = 88; Match(STRING);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 89; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode[] IDENT() { return GetTokens(FlatbufferParser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(FlatbufferParser.IDENT, i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; _localctx.key = Match(T__2);
			{
			State = 93; Match(IDENT);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 94; Match(T__3);
				State = 95; Match(IDENT);
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 101; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributeContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode STRING() { return GetToken(FlatbufferParser.STRING, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitAttribute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttributeContext attribute() {
		AttributeContext _localctx = new AttributeContext(Context, State);
		EnterRule(_localctx, 6, RULE_attribute);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; _localctx.key = Match(T__4);
			State = 105; Match(STRING);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 106; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RootTypeContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode IDENT() { return GetToken(FlatbufferParser.IDENT, 0); }
		public RootTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rootType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterRootType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitRootType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRootType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootTypeContext rootType() {
		RootTypeContext _localctx = new RootTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_rootType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; _localctx.key = Match(T__5);
			State = 110; Match(IDENT);
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 111; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileExtensionContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode STRING() { return GetToken(FlatbufferParser.STRING, 0); }
		public FileExtensionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileExtension; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterFileExtension(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitFileExtension(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileExtension(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileExtensionContext fileExtension() {
		FileExtensionContext _localctx = new FileExtensionContext(Context, State);
		EnterRule(_localctx, 10, RULE_fileExtension);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; _localctx.key = Match(T__6);
			State = 115; Match(STRING);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 116; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileIdentifierContext : ParserRuleContext {
		public IToken key;
		public ITerminalNode STRING() { return GetToken(FlatbufferParser.STRING, 0); }
		public FileIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileIdentifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterFileIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitFileIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileIdentifierContext fileIdentifier() {
		FileIdentifierContext _localctx = new FileIdentifierContext(Context, State);
		EnterRule(_localctx, 12, RULE_fileIdentifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; _localctx.key = Match(T__7);
			State = 120; Match(STRING);
			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 121; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringContext : ParserRuleContext {
		public IToken text;
		public ITerminalNode STRING() { return GetToken(FlatbufferParser.STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringContext @string() {
		StringContext _localctx = new StringContext(Context, State);
		EnterRule(_localctx, 14, RULE_string);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; _localctx.text = Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetasContext : ParserRuleContext {
		public BindMetaContext[] bindMeta() {
			return GetRuleContexts<BindMetaContext>();
		}
		public BindMetaContext bindMeta(int i) {
			return GetRuleContext<BindMetaContext>(i);
		}
		public IndexMetaContext[] indexMeta() {
			return GetRuleContexts<IndexMetaContext>();
		}
		public IndexMetaContext indexMeta(int i) {
			return GetRuleContext<IndexMetaContext>(i);
		}
		public NullableMetaContext[] nullableMeta() {
			return GetRuleContexts<NullableMetaContext>();
		}
		public NullableMetaContext nullableMeta(int i) {
			return GetRuleContext<NullableMetaContext>(i);
		}
		public ReferenceMetaContext[] referenceMeta() {
			return GetRuleContexts<ReferenceMetaContext>();
		}
		public ReferenceMetaContext referenceMeta(int i) {
			return GetRuleContext<ReferenceMetaContext>(i);
		}
		public MetasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_metas; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterMetas(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitMetas(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMetas(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetasContext metas() {
		MetasContext _localctx = new MetasContext(Context, State);
		EnterRule(_localctx, 16, RULE_metas);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BRACKET_L) {
				{
				State = 130;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 126; bindMeta();
					}
					break;
				case 2:
					{
					State = 127; indexMeta();
					}
					break;
				case 3:
					{
					State = 128; nullableMeta();
					}
					break;
				case 4:
					{
					State = 129; referenceMeta();
					}
					break;
				}
				}
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BindMetaContext : ParserRuleContext {
		public IToken key;
		public StringContext path;
		public ITerminalNode BRACKET_L() { return GetToken(FlatbufferParser.BRACKET_L, 0); }
		public ITerminalNode PARENTHESES_L() { return GetToken(FlatbufferParser.PARENTHESES_L, 0); }
		public ITerminalNode PARENTHESES_R() { return GetToken(FlatbufferParser.PARENTHESES_R, 0); }
		public ITerminalNode BRACKET_R() { return GetToken(FlatbufferParser.BRACKET_R, 0); }
		public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public BindMetaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bindMeta; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.EnterBindMeta(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatbufferListener typedListener = listener as IFlatbufferListener;
			if (typedListener != null) typedListener.ExitBindMeta(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFlatbufferVisitor<TResult> typedVisitor = visitor as IFlatbufferVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBindMeta(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BindMetaContext bindMeta() {
		BindMetaContext _localctx = new BindMetaContext(Context, State);
		EnterRule(_localctx, 18, RULE_bindMeta);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(BRACKET_L);
			State = 136; _localctx.key = Match(T__8);
			State = 137; Match(PARENTHESES_L);
			State = 138; _localctx.path = @string();
			State = 139; Match(PARENTHESES_R);
			State = 140; Match(BRACKET_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
